fixed spacing on streamer page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ p{
   width: 100%;
   background-image: rgb(256,256,256);
   margin-top: 100px;
-  padding-top: 60px;
+  padding-top: 100px;
   padding-bottom: 100px;
   
   padding-right: 20px;
